# tabkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tabkit/: __init__.py
src/tabkit/data/: __init__.py  config.py  table_processor.py  transforms.py
tabkit/: __init__.py  config.py
tabkit/config/: __init__.py  paths.py
tabkit/data/: __init__.py  column_metadata.py  config.py  table_processor.py  tabular_dataset.py  transforms.py
tabkit/data/utils/: __init__.py  bin_col.py  column_metadata.py  encode_col.py  impute_col.py  load_automm_dataset.py  load_from_disk.py  load_from_file.py  pick_label_col.py  scale_col.py
tabkit/utils/: __init__.py  configuration.py  gpu_usage.py  safe_json.py  set_random_seed.py
tests/data/: test_table_processor.py  test_transforms.py
